fixes z-index to push view links under header nav

--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -10,6 +10,10 @@
 
 $grid-float-breakpoint: 992px;
 
+#sortAndPerPage .btn-group {
+  z-index: 0;
+}
+
 #primary-nav {
   margin-top: 25px;
 }
